# utau_voicebank_manager

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: frd-audio-engine-v2.md  frd-guided-recording-studio.md  hybrid-cloud-voice-training.md
docs/reference/: japanese-vcv-reclist.md
docs/research/: singing-phoneme-detection.md
script/: bootstrap  cibuild  console  models  server  setup  test  update
src/: __init__.py
src/backend/: __init__.py  config.py  main.py
src/backend/api/: dependencies.py  exception_handlers.py
src/backend/data/: japanese_cv_paragraphs.py  japanese_vcv_paragraphs.py
src/backend/domain/: __init__.py  alignment_config.py  batch_oto.py  generated_voicebank.py  job.py  oto_entry.py  oto_suggestion.py  oto_validation.py  pagination.py  paragraph_prompt.py  phoneme.py  prompt.py  recording_list.py  recording_session.py  utau.py  voicebank.py
src/backend/ml/: __init__.py  download_models.py  forced_aligner.py  forced_alignment_detector.py  gpu_fallback.py  model_registry.py  oto_suggester.py  phoneme_detector.py  sofa_aligner.py
src/backend/repositories/: __init__.py  interfaces.py  oto_repository.py  recording_session_repository.py  voicebank_repository.py
src/backend/services/: __init__.py  job_service.py  (+11 more)
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: test_alignment_config.py  test_api_error_handling.py  test_batch_oto_service.py  test_concurrent_access.py  test_english_recording_flow.py  test_oto_parser.py  test_oto_suggester.py  test_paragraph_recording_flow.py  test_paragraph_segmentation.py  test_reclist_parser.py  test_recording_sessions.py  test_sofa_aligner.py  test_sofa_dictionary.py  test_transcript_extraction.py  test_voicebank_download.py  test_voicebank_generator.py
(+112 files in other folders)
