[project]
name = "utau-voicebank-manager"
version = "0.1.0"
description = "AI-assisted voicebank creation platform for UTAU/OpenUTAU singing synthesizers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.18",
    "python-slugify>=8.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.36.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "phonemizer>=3.3.0",
    "protobuf>=6.33.5",
    "lightning>=2.6.1",
    "einops>=0.8.2",
    "h5py>=3.15.1",
    "textgrid>=1.6.1",
    "chardet>=5.2.0",
    "tensorboard>=2.20.0",
    "pandas>=3.0.0",
    "matplotlib>=3.10.8",
    "torchcodec>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (needed for Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
